bug fix2 white space after vh

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,9 @@ body {
   margin: 0%;
   padding: 0%;
   overflow-x: hidden;
-  min-height: 100%
+  min-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 li {
